# go2-mujoco-sb3-train

./: .gitignore
genesis/: go2_env.py  pyproject.toml  train.py
simulate_python/: pyproject.toml  test.py  train.py  unitree_mujoco.py
simulate_python/env/: go2_flat_env.py  utils.py
unitree_robots/go2/: go2.xml  scene.xml
