[project]
name = "simulate-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gym>=0.26.2",
    "gymnasium>=1.1.1",
    "mujoco>=3.3.4",
    "mujoco-py>=2.1.2.14",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
]
